# PIM2013

./: .gitignore  PIM2013.pro  README.md  TODO  common.pri  configure.ac  doxygenConfig  main.pro  sandbox.pro
doc/html/: Camera_8h_source.html  Color_8h_source.html  Image_8h_source.html  PlyFile_8h_source.html  PointSet_8h_source.html  Vertex_8h_source.html  annotated.html  annotated.js  classBadIndex.html  classCamera-members.html  classCamera.html  classCamera.js  classCamera__coll__graph.md5  classColor-members.html  classColor.html  classColor.js  classConfig-members.html  classConfig.html  classImage-members.html  classImage.html  classImage.js  classIncompatibleImages.html  classPointSet-members.html  classPointSet.html  classPointSet.js  classVertex-members.html  classVertex.html  classVertex.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  graph_legend.html  index.html  navtree.js  navtreeindex0.js  structCoordinate-members.html  structCoordinate.html  structCoordinate.js  (+37 more)
doc/html/search/: all_63.js  all_66.js  all_76.js  classes_62.js  classes_69.js  classes_70.js  search.js
doc/latex/: annotated.tex  classBadIndex.tex  classCamera.tex  classCamera__coll__graph.md5  classColor.tex  classConfig.tex  classImage.tex  classIncompatibleImages.tex  classPointSet.tex  classVertex.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  doxygen.sty  refman.tex  structCoordinate.tex  structFacePOD.tex  structOtherData.tex  structOtherElem.tex  structOtherElem__coll__graph.md5  structPlyElement.tex  structPlyElement__coll__graph.md5  structPlyFile.tex  structPlyFile__coll__graph.md5  structPlyOtherElems.tex  structPlyOtherElems__coll__graph.md5  structPlyOtherProp.tex  structPlyOtherProp__coll__graph.md5  structPlyProperty.tex  structVertexPOD.tex
doc/man/man3/: BadIndex.3  Camera.3  Color.3  Config.3  Coordinate.3  FacePOD.3  Image.3  IncompatibleImages.3  OtherData.3  OtherElem.3  PlyElement.3  PlyFile.3  PlyOtherElems.3  PlyOtherProp.3  PlyProperty.3  PointSet.3  Vertex.3  VertexPOD.3  _home_tiago_Documentos_PIM2013_include_.3  _home_tiago_Documentos_PIM2013_src_.3
include/: Camera.h  Clip.h  Color.h  Config.h  FileWriterServices.h  Frame.h  GLViewer.h  Image.h  ImageBase.h  ImagePyramid.h  MathUtils.h  PNMImage.h  PNMImageDefs.h  PPMImage.h  ParameterHandler.h  PixelTracker.h  PlyFile.h  PointCloudGenerator.h  PointSet.h  Rectangle.h  SubImage.h  Tools.h  TrackInfo.h  Vertex.h  Window.h  Writer.h  vector3f.h
report/doc/: pim.bbl  pim.bib  pim.sty  pim.tex
report/doc/img/: f10_texture.pgm  f9_texture.pgm  frame10.ppm
report/slides/: Makefile  pim.sty  pim.tex
report/slides/img/: ColorChart.ppm  f9_disparityMap.ppm
resources/Project/Data/: bigMask.pgm  colorChart.ppm  mask.pgm  smallMask.pgm
resources/Project/Data/Config/: KinectConfig.xml
resources/Project/Images/: frame_20121108T103323.258153_rgb-ascci.pgm  frame_20121108T103323.258153_rgb-brut.pgm  frame_20121108T103323.304846_rgb-brut.pgm  frame_20121108T103323.334182_rgb-brut.pgm  frame_20121108T103323.356899_rgb-brut.pgm  frame_20121108T103323.390878_rgb-brut.pgm
resources/Project/PointSets/: frame000-brut.ply
resources/Project/Ui/: mainInterface.Qt4.ui
site/: index.html  style.css
site/images/: f36.ppm  result.ppm  transform.sh
src/: Camera.cpp  Clip.cpp  Color.cpp  Config.cpp  FileWriterServices.cpp  Frame.cpp  GLViewer.cpp  Image.cpp  Image.h  ImageBase.cpp  ImagePyramid.cpp  KinectConfig.xml  Makefile.am  PNMImage.cpp  PPMImage.cpp  ParameterHandler.cpp  PixelTracker.cpp  PlyFile.c  PointCloudGenerator.cpp  PointSet.cpp  SubImage.cpp  TrackInfo.cpp  Vertex.cpp  Window.cpp  main.cpp  sandbox.cpp
