# Prelude
AC_INIT([facialReconstruction],[1.0],[bug-reporte@adress])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PREREQ(2.69)


# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

# Check for libraries 
# Check for header files 
# Check for typedefs, structures, and compilers characteristics
# Check for library functions 

# Output Files
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

